Tested with partition collection. Improved parallelism. Added README.

--- a/src/main/resources/config
+++ b/src/main/resources/config
@@ -1,12 +1,13 @@
-ThreadCount=500
-
-UserName=<<username>>
+ThreadCount=5
+UserName=<<dbaccname>>
 Password=<<password>>
 AccEndpoint=<<endpoint>>
 Port=10250
+PreProvisioned=true
 DatabaseName=perfTestDB
-CollectionName=perfTestCollMP
-IsPCollection=true
-NumberOfDocumentsToInsert=100000
+CollectionName=perfTestCollSP
+IsPCollection=false
 CollectionPartitionKeyField=partitionKey
+NumberOfDocumentsToInsert=10000
+BatchSize=24
 DocumentTemplateFile=sample.json
